INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../compat -I$(srcdir)/../cursors -I$(srcdir)/../interfaces \
    -I$(srcdir)/../pixmapfx \
    -I$(srcdir)/../tools \
    -I$(srcdir)/../views \
    -I$(srcdir)/../widgets $(all_includes)

noinst_LTLIBRARIES = libkolourpaintcompat.la
libkolourpaintcompat_la_SOURCES = kpbug.cpp

METASOURCES = AUTO

