INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../cursors -I$(srcdir)/../pixmapfx \
    -I$(srcdir)/../tools \
    -I$(srcdir)/../widgets $(all_includes)

noinst_LTLIBRARIES = libkolourpaintpixmapfx.la
libkolourpaintpixmapfx_la_SOURCES = kpcoloreffect.cpp \
    kpeffectcontrast.cpp \
    kpeffectsdialog.cpp \
    kpeffectswirl.cpp \
    kpfloodfill.cpp \
    kppixmapfx.cpp

METASOURCES = AUTO
