
AM_CPPFLAGS = -I .. -I ../pixmapfx -I ../tools -I ../widgets $(all_includes)

noinst_LTLIBRARIES = libkolourpainttools.la
libkolourpainttools_la_SOURCES = kptool.cpp kptoolairspray.cpp \
    kptoolbrush.cpp kptoolclear.cpp \
    kptoolcolorpicker.cpp kptoolcolorwasher.cpp \
    kptoolconverttograyscale.cpp kptoolellipse.cpp \
    kptoolellipticalselection.cpp kptooleraser.cpp \
    kptoolflip.cpp kptoolfloodfill.cpp \
    kptoolfreeformselection.cpp kptoolinvertcolors.cpp \
    kptoolline.cpp kptoolpen.cpp kptoolpolygon.cpp \
    kptoolrectangle.cpp kptoolrectselection.cpp \
    kptoolresizescale.cpp kptoolrotate.cpp \
    kptoolroundedrectangle.cpp kptoolselection.cpp \
    kptoolskew.cpp 
libkolourpainttools_la_LIBADD = ../pixmapfx/libkolourpaintpixmapfx.la

libkolourpainttools_la_METASOURCES = kptool.moc \
    kptoolairspray.moc \
    kptoolbrush.moc \
    kptoolcolorpicker.moc \
    kptoolcolorwasher.moc \
    kptoolellipse.moc \
    kptooleraser.moc \
    kptoolfloodfill.moc \
    kptoolline.moc \
    kptoolpen.moc \
    kptoolpolygon.moc \
    kptoolrectangle.moc \
    kptoolresizescale.moc \
    kptoolrotate.moc \
    kptoolroundedrectangle.moc \
    kptoolselection.moc

