INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../cursors -I$(srcdir)/../interfaces \
    -I$(srcdir)/../pixmapfx \
    -I$(srcdir)/../tools \
    -I$(srcdir)/../views \
    -I$(srcdir)/../widgets $(all_includes)

noinst_LTLIBRARIES = libkolourpaintviews.la
libkolourpaintviews_la_SOURCES = kpthumbnailview.cpp \
    kpunzoomedthumbnailview.cpp \
    kpzoomedthumbnailview.cpp \
    kpzoomedview.cpp

METASOURCES = AUTO

