INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../cursors -I$(srcdir)/../pixmapfx \
    -I$(srcdir)/../tools \
    -I$(srcdir)/../widgets $(all_includes)

noinst_LTLIBRARIES = libkolourpaintwidgets.la
libkolourpaintwidgets_la_SOURCES = kpcolortoolbar.cpp kptooltoolbar.cpp \
    kptoolwidgetbase.cpp kptoolwidgetbrush.cpp \
    kptoolwidgeterasersize.cpp kptoolwidgetfillstyle.cpp \
    kptoolwidgetlinewidth.cpp \
    kptoolwidgetspraycansize.cpp

METASOURCES = AUTO

